# ms_parser

./: .gitignore  Cargo.toml  README.adoc  README.md  rustfmt.toml  taplo.toml
doc/: Agilent DATA.MS File_Format.txt
examples/: convert.rs  display.rs
input/12_FAMES_01.D/: GC.ini  PRE_POST.INI  RESULTS.CSV  acqmeth.txt  rteres.txt  tmplibrp.txt
input/7_FAMES_01.D/: GC.ini  PRE_POST.INI  acqmeth.txt  cnorm.ini
input/ipc/constant-flow/100/: 100-1.1.ipc  100-10.1.ipc  100-10.2.ipc  100-10.3.ipc  100-2.1.ipc  100-3.1.ipc  100-4.1.ipc  100-4.2.ipc  100-5.1.ipc  100-5.2.ipc  100-6.1.ipc  100-6.2.ipc  100-7.1.ipc  100-7.2.ipc  100-8.1.ipc  100-9.1.ipc  100-9.3.ipc
input/ipc/constant-flow/110/: 110-10.1.ipc  110-10.2.ipc  110-10.3.ipc  110-2.1.ipc  110-3.1.ipc  110-4.1.ipc  110-4.2.ipc  110-5.1.ipc  110-6.1.ipc  110-6.2.ipc  110-6.3.ipc  110-7.1.ipc  110-7.2.ipc  110-7.3.ipc  110-8.1.ipc  110-8.2.ipc  110-8.3.ipc  110-9.1.ipc  110-9.2.ipc
input/ipc/constant-flow/120/: 120-10.1.ipc  120-10.2.ipc  120-10.3.ipc  120-2.1.ipc  120-3.1.ipc  120-4.1.ipc  120-4.2.ipc  120-5.1.ipc  120-5.2.ipc  120-6.1.ipc  120-6.2.ipc  120-6.3.ipc  120-7.1.ipc  120-7.2.ipc  120-7.3.ipc  120-8.1.ipc  120-8.2.ipc  120-8.3.ipc  120-9.1.ipc  120-9.3.ipc
input/ipc/constant-flow/130/: 130-1.1.ipc  130-10.1.ipc  130-10.2.ipc  130-2.1.ipc  130-3.1.ipc  130-4.1.ipc  130-4.2.ipc  130-5.1.ipc  130-5.2.ipc  130-6.1.ipc  130-6.2.ipc  130-6.3.ipc  130-7.1.ipc  130-7.2.ipc  130-7.3.ipc  130-8.1.ipc  130-8.2.ipc  130-8.3.ipc  130-9.1.ipc  130-9.2.ipc  130-9.3.ipc
input/ipc/constant-flow/140/: 140-10.1.ipc  140-10.2.ipc  140-10.3.ipc  140-2.1.ipc  140-3.1.ipc  140-4.1.ipc  140-4.2.ipc  140-5.1.ipc  140-5.2.ipc  140-5.3.ipc  140-6.1.ipc  140-6.2.ipc  140-7.1.ipc  140-7.2.ipc  140-7.3.ipc  140-8.1.ipc  140-8.2.ipc  140-8.3.ipc  (+3 more)
src/: error.rs  lib copy.rs  lib.rs  main.rs  parse.rs
src/records/: directory.rs  header.rs  mod.rs  normalization.rs  spectral copy.rs  spectral.rs
src/utils/: mod.rs  nom.rs  uom.rs
(+3560 files in other folders)
