[package]
edition = "2021"
name = "ms_parser"
version = "0.0.8"

[dependencies]
anyhow = "1.0.86"
nom = "7.1.3"
thiserror = "1.0.61"
tracing = "0.1.40"
uom = "0.36.0"

[dev-dependencies]
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
polars = { version = "0.41.3", features = ["dtype-u16", "lazy", "serde"] }
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive", "std"] }

# uom = { git = "https://github.com/iliekturtles/uom", features = ["std"] }
# nom-derive = "0.10.0"
