[package]
name = "ms_parser"
version = "0.0.9"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
nom = "8.0.0"
thiserror = "2.0.11"
tracing = "0.1.41"
uom = "0.36.0"

[dev-dependencies]
bincode = "1.3.3"
clap = { version = "4.5.30", features = ["derive"] }
polars = { version = "0.46.0", features = ["dtype-u16", "lazy", "serde"] }
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive", "std"] }

# uom = { git = "https://github.com/iliekturtles/uom", features = ["std"] }
# nom-derive = "0.10.0"
