[package]
name = "ms_parser"
version = "0.0.9"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
nom = "8.0.0"
polars-utils = { git = "https://github.com/pola-rs/polars", rev = "65848bc2ff4bda33809ed8be2517594df5b53d26", features = [
    "nightly",
] }
thiserror = "2.0.11"
tracing = "0.1.41"
uom = "0.36.0"

[dev-dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
metadata = { git = "https://github.com/ippras/metadata" }
polars = { version = "0.46.0", features = ["dtype-u16", "lazy", "serde"] }
ron = "0.8.1"
semver = "1.0.25"
serde = { version = "1.0.218", features = ["derive", "std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# dialoguer = "0.11.0"
# uom = { git = "https://github.com/iliekturtles/uom", features = ["std"] }
# nom-derive = "0.10.0"
